# resume-adapter

./: .env.example  base_resume.json  base_resume_sa.json  cache.json  main.py  pdf.py  pyproject.toml  schemas.py  vacancy.txt
core/: logger.py  settings.py
gateways/: openai.py  prompts.py
