[project]
name = "resume-adapter"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Bazhenov",email = "bazhenov.in@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "reportlab (>=4.4.4,<5.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "orjson (>=3.11.4,<4.0.0)",
    "openai (>=2.11.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
